syntax = "proto3";
package coolcar;
option go_package="coolcar/proto/gen/go;trippb";

message Location { // 复合类型
  double latitude = 1;
  double longitude = 2;
}

enum TripStatus { // 枚举
  TS_NOT_SPECIFIED = 0;
  NOT_STARTED = 1;
  IN_PROGRESS = 2;
  FINISHED = 3;
  PAID = 4;
}

message Trip {
  string start = 1;
  Location start_pos = 5;
  repeated Location path_locations = 7; // 字段以s结尾 repeated-slice
  string end = 2;
  int32 duration_sec = 3; // 如果使用int64可能返回给前端的会变成字符串，int64太大为了保险转成字符串
  int32 fee_cent = 4;
  Location end_pos = 6;
  TripStatus status = 8;
}

message GetTripRequest {
  string id = 1;
}

message GetTripRespons {
  string id = 1;
  Trip trip = 2;
}

service TripService {
  rpc GetTrip (GetTripRequest) returns (GetTripRespons);
}
